# ginepro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  cd.yml  ci.yml  publish.yml
ginepro/: CHANGELOG.md  Cargo.toml
ginepro/examples/: build_and_resolve.rs  client.rs  client_tls.rs  resolution_strategy.rs
ginepro/src/: balanced_channel.rs  client_channel.rs  dns_resolver.rs  lib.rs  lookup_service.rs  service_definition.rs  service_probe.rs
shared_proto/: Cargo.toml  build.rs
shared_proto/proto/: echo.proto
shared_proto/src/: lib.rs
src/: client_channel.rs  lib.rs  resolve.rs
tests/: Cargo.toml  build.rs
tests/all/: lookup.rs  main.rs  service_probe.rs  test.rs
tests/src/: lib.rs  test_server.rs  tls.rs
tests/tests/all/: fixtures.rs  lookup.rs  main.rs  service_probe.rs
tests/tests/all/certs/: mod.rs
