[package]
name = "ginepro"
version = "0.1.0"
authors = ["Helge Hoff <helge.hoff@truelayer.com>"]
edition = "2018"
description = "A client-side gRPC channel implementation for tonic"
repository = "https://github.com/TrueLayer/ginepro"
license = "MIT"
keywords = ["gRPC", "tonic", "channel", "load", "balancer"]
categories = ["asynchronous", "web-programming"]

[dependencies]
tonic = { version = "0.4", features = ["tls"] }
tower = { version = "0.4", default-features = false, features = ["discover"] }
tower-service = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.20"
async-trait = "0.1"
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-futures = "0.2"
http = "0.2"
