[package]
name = "ginepro"
version = "0.1.0"
authors = ["Helge Hoff <helge.hoff@truelayer.com>"]
edition = "2018"
description = "A client-side gRPC channel implementation for tonic"
repository = "https://github.com/TrueLayer/ginepro"
license = "MIT"
keywords = ["gRPC", "tonic", "channel", "load", "balancer"]
categories = ["asynchronous", "web-programming"]

[dependencies]
tonic = { version = "0.4", features = ["tls"] }
tower = { version = "0.4", default-features = false, features = ["discover"] }
tower-service = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.20"
async-trait = "0.1"
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-futures = "0.2"
http = "0.2"
prost = "0.7"
openssl = "0.10.34"

[build-dependencies]
tonic-build = "0.4.2"

[dev-dependencies]
openssl = "0.10"
tokio-rustls = "0.22"
rustls = { version =  "0.19", features = ["dangerous_configuration"] }
lazy_static = "1.4"
reqwest = "0.11"
futures = "0.3.12"
tokio-stream = { version = "0.1.2", features = ["net"] }
hyper = "0.14"
