[package]
name = "ginepro"
version = "0.7.0"
edition = "2021"
description = "A client-side gRPC channel implementation for tonic"
repository = "https://github.com/TrueLayer/ginepro"
license = "MIT OR Apache-2.0"
keywords = ["gRPC", "tonic", "channel", "load", "balancer"]
categories = ["asynchronous", "web-programming"]
readme = "../README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
http.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["tls"] }
tower = { workspace = true, default-features = false, features = ["discover"] }
tracing.workspace = true
trust-dns-resolver.workspace = true

[dev-dependencies]
proptest.workspace = true
shared-proto = { path = "../shared_proto" }
tests = { path = "../tests" }
