[package]
name = "ginepro"
version = "0.9.0"
edition = "2021"
description = "A client-side gRPC channel implementation for tonic"
repository = "https://github.com/TrueLayer/ginepro"
license = "MIT OR Apache-2.0"
keywords = ["gRPC", "tonic", "channel", "load", "balancer"]
categories = ["asynchronous", "web-programming"]
readme = "../README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
http = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["tls-ring"] }
tower = { version = "0.5", default-features = false, features = ["discover"] }
tracing = "0.1"
hickory-resolver = { version = "0.25", features = ["tokio"] }

[dev-dependencies]
proptest = "1"
shared-proto = { path = "../shared_proto" }
tests = { path = "../tests" }
