[package]
name = "shared-proto"
version = "0.1.0"
authors = ["Helge Hoff <helge.hoff@truelayer.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
