[package]
name = "tests"
version = "0.1.0"
authors = ["Helge Hoff <helge.hoff@truelayer.com>"]
edition = "2021"
publish = false

[dependencies]
ginepro = { path = "../ginepro" }

tonic = { version = "0.9", features = ["tls"] }
openssl = "0.10"
tracing = { version = "0.1", features = ["log", "attributes"] }
futures = "0.3.12"
tokio-stream = { version = "0.1.2", features = ["net"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower-service = "0.3"
tower-layer = "0.3"

[dev-dependencies]
anyhow = "1"
async-trait = "0.1"
tonic-health = "0.9"
shared-proto = { path = "../shared_proto"}
