[package]
name = "tests"
version = "0.1.0"
authors = ["Helge Hoff <helge.hoff@truelayer.com>"]
edition = "2021"
publish = false

[dependencies]
ginepro = { path = "../ginepro" }

futures = "0.3"
hyper = "1"
openssl = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.13", features = ["tls-ring"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = { version = "0.1", features = ["attributes", "log"] }

[dev-dependencies]
anyhow = "1"
async-trait = "0.1"
shared-proto = { path = "../shared_proto" }
tonic-health = "0.13"
